<resources>
    <string name="app_name">HealthEra</string>
    
    <!-- Login Screen -->
    <string name="login_title">Bienvenue</string>
    <string name="login_subtitle">Connectez-vous pour continuer</string>
    <string name="email_hint">Adresse email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="no_account">Pas encore de compte ?</string>
    <string name="signup_link">S\'inscrire</string>
    
    <!-- Signup Screen -->
    <string name="signup_title">Créer un compte</string>
    <string name="signup_subtitle">Rejoignez la communauté HealthEra</string>
    <string name="nom_hint">Nom</string>
    <string name="prenom_hint">Prénom</string>
    <string name="phone_hint">Numéro de téléphone</string>
    <string name="date_naissance_hint">Date de naissance</string>
    <string name="signup_button">S\'inscrire</string>
    <string name="already_account">Déjà un compte ?</string>
    <string name="login_link">Se connecter</string>
    
    <!-- Validation Messages -->
    <string name="error_empty_field">Ce champ est obligatoire</string>
    <string name="error_invalid_email">Email invalide</string>
    <string name="error_invalid_phone">Numéro de téléphone invalide (8 chiffres requis)</string>
    <string name="error_password_short">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="error_invalid_date">Date de naissance invalide</string>
    <string name="error_future_date">La date de naissance doit être dans le passé</string>
    <string name="error_network">Erreur réseau. Vérifiez votre connexion</string>
    
    <!-- Success Messages -->
    <string name="signup_success">Inscription réussie !</string>
    <string name="login_success">Connexion réussie !</string>
    
    <!-- Dashboard -->
    <string name="welcome_message">Bienvenue, %s !</string>
    <string name="logout">Déconnexion</string>
    
    <!-- Profile -->
    <string-array name="sexe_options">
        <item>Sélectionner</item>
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    
    <string-array name="objectif_options">
        <item>Sélectionner</item>
        <item>Perte de poids</item>
        <item>Prise de masse</item>
        <item>Maintien</item>
    </string-array>
    
    <string-array name="niveau_activite_options">
        <item>Sélectionner</item>
        <item>Sédentaire</item>
        <item>Léger</item>
        <item>Modéré</item>
        <item>Intense</item>
        <item>Très intense</item>
    </string-array>
</resources>